# envconf

./: .gitignore  .gitmodules  Makefile.am  README  README.md  autogen.sh  bootstrap  bootstrap.conf  configure.ac  rules.mk  xdg-configure
.github/workflows/: ci.yml  cicd.yml
build-aux/: .gitignore  install-buildreqs  install-prereqs  install-reqs
data/: Makefile.am
data/autoconf/: .gitignore  Makefile.am  config-site-systemd.in  config-site-sysvinit  config.site  config.site.in
data/aws-cli/: Makefile.am
data/aws-cli/bashrc.d/: .gitignore  Makefile.am  aws-cli-completion.sh
data/aws-cli/profile.d/: .gitignore  Makefile.am  aws.sh.in
data/bash/: .bash_profile  .bashrc  .bashrc.in  .gitignore  .profile.in  Makefile.am  bashrc.in  functions.in  global-bash.in  multi-bash-hack.sh.in  profile.in  single-bash.sh  win-python-pathmung.in
data/bash/bashrc.d/: .gitignore  Makefile.am  bash-completion.sh.in  files.sh  functions.sh  functions.sh.in  misc.sh  ps1.sh.in  set.sh
data/bash/common/: .bash_profile.in  .bashrc.in  .gitignore  Makefile.am  bashrc.in  functions.in  global-bash.in  gnubin-pathmung.in  homebrew-pathmung.in  multi-bash-hack.sh.in  profile.in  scl-bash.in
data/bash/common/bashrc.d/: .gitignore  0-multi-bash-hack.sh.in  Makefile.am  aws-aliases.sh.in  aws-functions.sh.in  bash-completion.sh  bash-completion.sh.in  bash.sh  ctags-alias.sh.in  ctags.sh  files.sh  functions.sh  gpg2.sh.in  grep.sh.in  java.sh  ls.sh  ls.sh.in  minicom.sh  misc.sh  mount.sh  proxy.sh.in  ps1.sh.in  s3cmd-alias.sh  set.sh  shopt.sh  ssh-digidata.sh  ssh-home.sh  ssh-umbc.sh  ssh-umd-cs.sh  ssh-umd.sh  ssh-umiacs-local.sh  ssh-umiacs.sh  svn.sh  svn.sh.in  vi.sh  vim.sh  vim.sh.in  yum.sh
data/bash/common/profile.d/: .gitignore  Makefile.am  android.sh  android.sh.in  arch-bin.sh  bash-completion.sh  bash.sh  conan.sh.in  editor.sh.in  eldk.sh  git.sh  git.sh.in  gnulib.sh.in  go.sh.in  gvim.sh.in  hadoop.sh.in  hbase.sh.in  idea.sh.in  macosx.sh  python.sh.in  scl.sh.in  zz-path.sh.in
data/bash/cygwin/: Makefile.am
data/bash/cygwin/bashrc.d/: Makefile.am  bash-completion.sh  cygwin-bash-completion.sh
data/bash/profile.d/: .gitignore  Makefile.am  bash-completion.sh  conan.sh.in  gpg.sh  vim.sh.in
data/bash/umbc/profile.d/: Makefile.am  umbc-cadence.sh  umbc-oracle.sh  umbc.sh
data/cmake/bashrc.d/: .gitignore  Makefile.am  cmake3.sh.in
data/conan/: Makefile.am
data/conan/profile.d/: .gitignore  Makefile.am  conan.sh.in
data/coreutils/bashrc.d/: .gitignore  Makefile.am  files.sh  ls-color.aliases  ls.aliases  ls.sh.in
data/ctags/bashrc.d/: .gitignore  Makefile.am  ctags.sh
data/dircolors/: .gitignore  Makefile.am  dircolors  dircolors.sh.in
data/git/: .gitconfig.in  .gitignore  .gitignore-core  Makefile.am  config.in  cred-helper-pass  gitconfig-signing-key.in  ignore  pager-diff-highlight.in
data/git/bashrc.d/: .gitignore  Makefile.am
data/git/profile.d/: .gitignore  Makefile.am  git.sh.in
data/gnulib/: Makefile.am
data/gnulib/profile.d/: .gitignore  Makefile.am
data/gnupg/: Makefile.am  gpg.conf
data/gnupg/bashrc.d/: .gitignore  Makefile.am
data/gnupg/profile.d/: Makefile.am
data/go/profile.d/: .gitignore  Makefile.am  go.sh.in
data/grep/bashrc.d/: .gitignore  Makefile.am  grep.sh.in
data/info/profile.d/: .gitignore  Makefile.am  info.sh.in
data/man/: .gitignore  .manpath.in  Makefile.am  dot-manpath.in
data/minicom/bashrc.d/: Makefile.am  minicom.sh
data/python/profile.d/: .gitignore  Makefile.am
data/readline/: .inputrc  Makefile.am  readline.sh
data/readline/profile.d/: .gitignore  Makefile.am  readline.sh.in
data/ruby/: .gitignore  Makefile.am  config.in  gemrc.in
data/ruby/profile.d/: .gitignore  Makefile.am  bundle.sh.in
data/scl/profile.d/: .gitignore  Makefile.am
data/ssh/: Makefile.am  config  github.conf  gitlab.conf  vagrant.conf
data/svn/: Makefile.am  config
data/vim/: .gitignore  .gvimrc.in  .vimrc.in  Makefile.am  cmake.vim  cmake.vim.in  custom.vim  gvimrc.in  gvimrc.linux  gvimrc.linux.in  init.vim.in  map.vim  misc.vim  option.vim  pathogen.vim  putinclude.vim  touch-object-file.vim  vim-plug-cmake  vim-plug-ycm.in  vim-plug.vim.in  vim-plug.vim.in.in  vimrc-cmake  vimrc-vim-plug  vimrc-ycm  vimrc.in  vimrc.in.in  vundle.vim  vundle.vim.in  yankinclude.vim  ycm-clangd-binary-path.in  ycm.vim.in
data/vim/bashrc.d/: .gitignore  Makefile.am  vi.sh.in
data/vim/profile.d/: .gitignore  Makefile.am  editor.sh.in  vim.sh.in
data/xdg/: .gitignore  Makefile.am  xdgrc.in
m4/: .gitignore  envconf.m4
scripts/: .gitignore  Makefile.am  config-bash.in  dl-git.in  dl-gnu-tool.in  fics  functions.in  gen-pass.in  get-autotools  get-bash  get-git  get-git.in  get-gnu-tool  get-gnu-tool.in  makecscope  mapred-restart.in  mini  nixify  pattern-rename  pattmv  rbackup  s3.in  space2hyphen  update-hadoop-cluster.in  upper2lower.cygwin  upper2lower.in  upper2lower.linux  weather
scripts/sed/: .gitignore  Makefile.am  ccproto.in  ccproto.sed  get-make-error-file.sed  skiperror.in
scripts/vim/: .gitignore  Makefile.am  beautify.in  beautify.vim  kr2allman.in  kr2allman.vim
